force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/LPCR_PlanningPrevisionnel__c.object-meta.xml
<CustomObject>
    <label>Détail Planning</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Détails Planning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>