force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_Contrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contrat__c</fullName>
    <label>Contrat</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Plannings Prévisionnels</relationshipLabel>
    <relationshipName>Plannings_Pr_visionnels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>