force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_HeureJeudiAm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureJeudiAm__c</fullName>
    <label>Heure Jeudi Matin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>