force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_HeureJeudiPm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureJeudiPm__c</fullName>
    <label>Heure Jeudi Après-Midi</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>