force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_HeureMardiAm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureMardiAm__c</fullName>
    <label>Heure Mardi Matin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>