force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_HeureMercrediAm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureMercrediAm__c</fullName>
    <label>Heure Mercredi Matin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>