force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_HeureMercrediPm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureMercrediPm__c</fullName>
    <label>Heure Mercredi Après-Midi</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>