force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_IdExternePlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExternePlanning__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>