force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_JourSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_JourSemaine__c</fullName>
    <formula>IF(LPCR_NombreHeuresJeudi__c  &lt;&gt; 0, 1, 0)  
+ 
IF(LPCR_NombreHeuresLundi__c &lt;&gt; 0, 1, 0) 
+ 
IF(LPCR_NombreHeuresMardi__c  &lt;&gt; 0, 1, 0) 
+ 
IF(LPCR_NombreHeuresMercredi__c  &lt;&gt; 0, 1, 0) 
+ 
IF(LPCR_NombreHeuresVendredi__c  &lt;&gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours par semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>