force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresJeudi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresJeudi__c</fullName>
    <formula>((Hour(LPCR_HeureFinJeudi__c) - Hour(LPCR_HeureDebutJeudi__c)) + ((Minute(LPCR_HeureFinJeudi__c) - Minute(LPCR_HeureDebutJeudi__c))/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&#39;heures Jeudi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>