force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresLundi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresLundi__c</fullName>
    <formula>((Hour(LPCR_HeureFinLundi__c) - Hour(LPCR_HeureDebutLundi__c)) + ((Minute(LPCR_HeureFinLundi__c) - Minute(LPCR_HeureDebutLundi__c))/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures Lundi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>