force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresMardi__c</fullName>
    <formula>((Hour(LPCR_HeureFinMardi__c) - Hour(LPCR_HeureDebutMardi__c)) + ((Minute(LPCR_HeureFinMardi__c) - Minute(LPCR_HeureDebutMardi__c))/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures Mardi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>