force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresMercredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresMercredi__c</fullName>
    <formula>((Hour(LPCR_HeureFinMercredi__c) - Hour(LPCR_HeureDebutMercredi__c)) + ((Minute(LPCR_HeureFinMercredi__c) - Minute(LPCR_HeureDebutMercredi__c))/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures Mercredi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>