force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresSemaine__c</fullName>
    <formula>LPCR_NombreHeuresJeudi__c + LPCR_NombreHeuresLundi__c + LPCR_NombreHeuresMardi__c + LPCR_NombreHeuresMercredi__c+  LPCR_NombreHeuresVendredi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures par semaines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>