force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_NombreHeuresVendredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresVendredi__c</fullName>
    <formula>((Hour(LPCR_HeureFinVendredi__c) - Hour(LPCR_HeureDebutVendredi__c)) + ((Minute(LPCR_HeureFinVendredi__c) - Minute(LPCR_HeureDebutVendredi__c))/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures Vendredi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>