force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_OrdreTri__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrdreTri__c</fullName>
    <label>Ordre de tri</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>