force-app/main/default/objects/LPCR_PlanningPrevisionnel__c/fields/LPCR_Planning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Planning__c</fullName>
    <label>Planning</label>
    <referenceTo>LPCR_Planning__c</referenceTo>
    <relationshipLabel>Plannings Prévisionnels</relationshipLabel>
    <relationshipName>Plannings_Pr_visionnels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>